# trailguard-host-forensics

./: .gitignore  Cargo.toml  README.md
config/: default-fast.toml  default-standard.toml  rules-miner.toml  rules.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/collector-linux-ebpf/: Cargo.toml  build.rs
crates/collector-linux-ebpf/ebpf/: Cargo.toml
crates/collector-linux-ebpf/ebpf/.cargo/: config.toml
crates/collector-linux-ebpf/ebpf/src/: main.rs
crates/collector-linux-ebpf/prebuilt/: README.md
crates/collector-linux-ebpf/prebuilt/linux/: trailguard-ebpf.bpfel
crates/collector-linux-ebpf/src/: lib.rs
crates/collector-linux-ebpf/tests/: linux_host_fixture.rs
crates/collector-linux-proc/: Cargo.toml
crates/collector-linux-proc/src/: lib.rs
crates/collector-linux-proc/tests/: linux_snapshot_fixture.rs
crates/collector-windows/: Cargo.toml
crates/collector-windows/src/: lib.rs
crates/common-model/: Cargo.toml
crates/common-model/src/: collector.rs  config.rs  lib.rs  model.rs  util.rs
crates/correlator/: Cargo.toml
crates/correlator/src/: lib.rs
crates/linux-ebpf-shared/: Cargo.toml
crates/linux-ebpf-shared/src/: lib.rs
crates/reporter-html/: Cargo.toml
crates/reporter-html/src/: lib.rs
crates/rule-engine/: Cargo.toml
crates/rule-engine/src/: lib.rs
crates/storage-sqlite/: Cargo.toml
crates/storage-sqlite/src/: lib.rs
docs/: architecture.md  deployment-package.md  evidence-model.md  roadmap.md
examples/: sample-output.md
packaging/linux/: QUICKSTART.txt  install.sh  uninstall.sh
scripts/: package-linux-bundle.sh
tests/: README.md
