[workspace]
members = [
    "crates/common-model",
    "crates/linux-ebpf-shared",
    "crates/storage-sqlite",
    "crates/rule-engine",
    "crates/correlator",
    "crates/reporter-html",
    "crates/collector-linux-proc",
    "crates/collector-linux-ebpf",
    "crates/collector-windows",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["OpenAI Codex"]
repository = "https://example.invalid/trailguard"

[workspace.dependencies]
anyhow = "1.0.100"
aya = "0.13.1"
bytes = "1.10.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.50", features = ["derive", "env"] }
dirs = "6.0.0"
glob = "0.3.3"
hex = "0.4.3"
hostname = "0.4.1"
html-escape = "0.2.13"
libc = "0.2.177"
notify = "8.2.0"
regex = "1.12.2"
rusqlite = { version = "0.37.0", features = ["bundled", "chrono", "serde_json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sysinfo = "0.37.2"
tempfile = "3.23.0"
thiserror = "2.0.17"
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
walkdir = "2.5.0"
netstat2 = "0.11.2"
rayon = "1.11.0"
