[package]
name = "collector-linux-proc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
common-model = { path = "../common-model" }
dirs.workspace = true
glob.workspace = true
libc.workspace = true
rayon.workspace = true
serde_json.workspace = true
thiserror.workspace = true
walkdir.workspace = true
