[package]
name = "collector-windows"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
common-model = { path = "../common-model" }
dirs.workspace = true
glob.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
walkdir.workspace = true

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
