[package]
name = "common-model"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
hex.workspace = true
hostname.workspace = true
netstat2.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
walkdir.workspace = true
