[package]
name = "correlator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
common-model = { path = "../common-model" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
